Update CloudFormation description

--- a/lambda_template.yaml.j2
+++ b/lambda_template.yaml.j2
@@ -1,7 +1,7 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: 'AWS::Serverless-2016-10-31'
 Description: >-
-  Lambda based translation-server to run Zotero translators ({{ node_env }})
+  Lambda-based translation-server to run Zotero translators ({{ node_env }})
 Resources:
   # Lambda function
   Lambda:
