--- a/lambda_template.yaml.j2
+++ b/lambda_template.yaml.j2
@@ -18,12 +18,18 @@ Resources:
            FunctionName: {{ identifier_search_function_name }}
       Events:
         # API Gateway
-        API:
+        PostAPI:
           Type: Api
           Properties:
             # Proxy all POST requests to Lambda function
             Path: /{proxy+}
             Method: post
+        OptionsAPI:
+          Type: Api
+          Properties:
+            # Proxy all OPTIONS requests to Lambda function
+            Path: /{proxy+}
+            Method: options
       Environment:
         Variables:
           NODE_ENV: {{ node_env }}
